tests/invalid/import_inside_while/main.py
def main() -> None:
    x: list[list[int]] = [[1]]
    x.xxx()
